# clang-struct

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: obs_push.yaml
frontend/: .gitignore  Gemfile  ruby-on-rails.service
frontend/app/assets/stylesheets/: application.css
frontend/app/controllers/: application_controller.rb  members_controller.rb  structs_controller.rb  uses_controller.rb
frontend/app/helpers/: application_helper.rb  structs_helper.rb
frontend/app/models/: member.rb  my_struct.rb  run.rb  source.rb  use.rb
frontend/app/views/layouts/: application.html.erb
frontend/app/views/members/: index.html.erb
frontend/app/views/root/: index.html.erb
frontend/app/views/shared/: _prev_next.html.erb  _search_filters.html.erb
frontend/app/views/structs/: index.html.erb  show.html.erb
frontend/app/views/uses/: show.html.erb
frontend/config/: application.rb  credentials.yml.enc  database.yml  routes.rb
frontend/config/environments/: development.rb  production.rb
frontend/db/: schema.rb
frontend/test/controllers/: structs_controller_test.rb
frontend/test/models/: my_struct_test.rb  use_test.rb
scripts/: CMakeLists.txt  cs-compare_db  highlight_files.pl  mariadb_create.sql  run_commands.pl
src/: CMakeLists.txt  Lock.cpp  Lock.h  Message.h  clang-struct.cpp  db_filler.cpp  server.cpp  server.h  sql.h  sqlconn.cpp  sqlconn.h  sqlite.h
src/clang-struct/: CMakeLists.txt  clang-struct.cpp
test/: CMakeLists.txt  double_unnamed.c  macro-cond.h  macro-cond1.c  macro-cond2.c  macro-expand.c  nested-ILE.c  nested_struct.c  packed.c  run_test.sh  trial.c  trial.h
